Checkpoint 2: Integrated Google Calendar with Canvas feeds

--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<head>
+   <!-- Required meta tags always come first -->
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-html
+
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+  <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/ai-chat.css" />
+
+
+   <title>JagTrack - Your Academic Success Hub</title>
+</head>
+
+
 <header class="jumbotron jumbotron-fluid">
-   <div class="container">
-       <div class="row">
-           <div class="col">
-               <h1>JagTrack</h1>
-               <h2>Your Academic Success Hub</h2>
-           </div>
-       </div>
-   </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-4">
+              <img src="img/ja-logo-TmpAVa_c.svg" class="img-fluid" alt="Jefferson Academy Logo" />
+          </div>
+          <div class="col">
+              <h1>JagTrack</h1>
+              <h2>Your Academic Success Hub</h2>
+          </div>
+      </div>
+  </div>
 </header>
 
 
-  <link rel="stylesheet" href="css/styles.css" />
 
-<div class="row align-items-center">
-  <div class="col-4">
-      <img src="img/ja-logo-TmpAVa_c.svg" alt="Jefferson Academy Logo" />
-  </div>
+
+
   <div class="col">
       <h1>JagTrack</h1>
       <h2>Your Academic Success Hub</h2>
@@ -29,15 +44,50 @@ html
 
 
 <body>
+    
 
-
-   <header>
-       <div>
-           <h1>JagTrack</h1>
-           <h2>Your Academic Success Hub</h2>
-       </div>
-   </header>
-
+<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+  <div class="container">
+      <a class="navbar-brand" href="index.html">
+          <img src="img/ja-initials-bLCg4zbA.svg" height="30" width="30" alt="JA Logo" />
+          JagTrack
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jagtrackNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="jagtrackNavbar">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="myclassesnextquarter.html">Next Quarter</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="aboutme.html">About Me</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="ai-chat.html">AI Chat</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#" id="theme-toggle">
+                      <span id="theme-icon">☀️</span>
+                  </a>
+              </li>
+          </ul>
+      </div>
+  </div>
+</nav>
+<header class="jumbotron jumbotron-fluid">
+  <div class="container">
+      <div class="row">
+          <div class="col text-center">
+              <h1>JagTrack</h1>
+              <h2>Your Academic Success Hub</h2>
+          </div>
+      </div>
+  </div>
+</header>
 
    <div>
        <h2>My 4 Classes</h2>
@@ -59,7 +109,7 @@ html
             <ul>
                 <li><a href="https://jajags.instructure.com" target="_blank">Canvas</a></li>
                 <li><a href="https://secondary.jajags.com" target="_blank">JA Website</a></li>
-                <li><a href="#">Student Portal</a></li>
+                <li><a href="https://www.dpsk12.org/page/my-portal" target="_blank">Student Portal</a></li>
             </ul>
         </div>
         <div class="col-12 col-md-4">
@@ -75,7 +125,7 @@ html
             <ul>
                 <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
                 <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
-                <li><a href="#">Study Groups</a></li>
+                <li><a href="https://www.broomfield.org/276/Library-Home" target="_blank">Study here I guess</a></li>
             </ul>
         </div>
     </div>
@@ -89,42 +139,24 @@ html
    </div>
 
 
-   <div>
-       <h2>Calendar & Deadlines</h2>
-       <h3>Stay On Track</h3>
-       <p>Never miss an assignment or test date again.</p>
-   </div>
+<div class="container">
+  <div class="row row-content">
+      <div class="col">
+          <h2 class="text-center">Calendar & Deadlines</h2>
+          <h3 class="text-center">Stay On Track</h3>
+          <p class="text-center">Your Canvas assignments automatically sync to this calendar. Never miss a deadline!</p>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col">
+          <div class="calendar-container">
+              PASTE YOUR MODIFIED IFRAME CODE HERE
+          </div>
+      </div>
+  </div>
+</div>
 
-
-  <footer>
-   <div class="container">
-       <div class="row">
-           <div class="col-4 col-sm-2 offset-1">
-               <h5>Quick Links</h5>
-               <ul class="list-unstyled">
-                   <li><a href="index.html">Home</a></li>
-                   <li><a href="#">My Classes</a></li>
-                   <li><a href="#">Resources</a></li>
-                   <li><a href="#">Contact</a></li>
-               </ul>
-           </div>
-           <div class="col-6 col-sm-5 text-center">
-               <h5>Connect</h5>
-               <a href="#">Canvas Portal</a> |
-               <a href="#">Study Groups</a> |
-               <a href="#">Help Center</a>
-           </div>
-           <div class="col-sm-4 text-center">
-               <h5>Contact</h5>
-               Jefferson Academy Secondary<br />
-               Email: <strong>javier.gonzalezcastellanos@jajags.com</strong> (Replace with your actual email!)
-           </div>
-       </div>
-   </div>
-</footer>
-
-
-
+npm ru
    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -136,14 +168,89 @@ html
     <!-- Your Bootstrap grid schedule will go here -->
 </div>
 
+<p class="d-block d-md-none text-center">
+  <a href="YOUR_GOOGLE_CALENDAR_URL" target="_blank" class="btn btn-primary">Open Calendar in New Tab (Better for Mobile)</a>
+</p>
+
+
+<iframe class="google-calendar-responsive" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&showPrint=0&mode=WEEK&src=amF2aWVyLmdvbnphbGV6Y2FzdGVsbGFub3NAamFqYWdzLmNvbQ&src=Y19mOTUyOTY3NzgyOTAxMjYxMWUxYzk4MGNjNjI1ZDJjZjM3NTQ3M2Y1ODc4YTI1ZDFlOGM0YzNmZGU4OGY1MmYxQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=MWNhc3RlbGxhbm9zbm1AZ21haWwuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=djNzaTc1YTg2djUxbGFndTRpcmxjNWhnODBlMmlxMzNAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%23616161&color=%23d50000&color=%230b8043&color=%23795548" style="border:solid 1px #777" height="600" frameborder="0" scrolling="no"></iframe>
+
+<div class="container">
+  <div class="row">
+      <div class="col">
+          <h2 class="text-center">My Current Classes</h2>
+          <hr />
+      </div>
+  </div>
+
+
+  <ul class="nav nav-tabs" id="classTab" role="tablist">
+      <li class="nav-item">
+          <a class="nav-link active" id="a-block-tab" data-toggle="tab" href="#a-block" role="tab">A Block</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" id="b-block-tab" data-toggle="tab" href="#b-block" role="tab">B Block</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" id="c-block-tab" data-toggle="tab" href="#c-block" role="tab">C Block</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" id="d-block-tab" data-toggle="tab" href="#d-block" role="tab">D Block</a>
+      </li>
+  </ul>
+
+
+  <div class="tab-content" id="classTabContent">
+      <div class="tab-pane fade show active" id="a-block" role="tabpanel">
+          <div class="class-card">
+              <h4>A Block: English Literature</h4>
+              <h5>8:25 AM - 9:55 AM</h5>
+              <p>Exploring classic and contemporary literature, developing critical analysis skills, and improving writing techniques.</p>
+              <a href="#" class="btn btn-primary">Go to Canvas →</a>
+          </div>
+      </div>
+
+
+      <div class="tab-pane fade" id="b-block" role="tabpanel">
+          <div class="class-card">
+              <h4>B Block: Web Design in HTML & CSS</h4>
+              <h5>10:00 AM - 11:30 AM</h5>
+              <p>Building modern, responsive websites using HTML, CSS, and Bootstrap framework. Creating the JagTrack project!</p>
+              <a href="https://jajags.instructure.com/courses/3438" target="_blank" class="btn btn-primary">Go to Canvas →</a>
+          </div>
+      </div>
+
+
+      <div class="tab-pane fade" id="c-block" role="tabpanel">
+          <div class="class-card">
+              <h4>C Block: Algebra II</h4>
+              <h5>12:15 PM - 1:45 PM</h5>
+              <p>Advanced algebra concepts including quadratic functions, exponential growth, and logarithms.</p>
+              <a href="#" class="btn btn-primary">Go to Canvas →</a>
+          </div>
+      </div>
+
+
+      <div class="tab-pane fade" id="d-block" role="tabpanel">
+          <div class="class-card">
+              <h4>D Block: Biology</h4>
+              <h5>1:50 PM - 3:20 PM</h5>
+              <p>Studying living organisms, cell biology, genetics, and ecosystems through lab work and research.</p>
+              <a href="#" class="btn btn-primary">Go to Canvas →</a>
+          </div>
+      </div>
+  </div>
+</div>
+
+
 <div class="container">
    <div class="row row-content">
-       <div class="col-12 col-md-6 col-lg-3">
+       <div class="col-12 col-md-6 - 1">
            <div class="class-card">
                <h4>A Block</h4>
-               <h5>English Literature</h5>
+               <h5>Non-Existant</h5>
                <p>8:25 AM - 9:55 AM</p>
-               <a href="#">Go to Canvas →</a>
+               <a href="https://hellostreetcat.framer.website/" target="_blank">Go do something else lmao</a>
            </div>
        </div>
        <div class="col-12 col-md-6 col-lg-3">
@@ -157,23 +264,49 @@ html
        <div class="col-12 col-md-6 col-lg-3">
            <div class="class-card">
                <h4>C Block</h4>
-               <h5>Algebra II</h5>
+               <h5>training your economy fr</h5>
                <p>12:15 PM - 1:45 PM</p>
-               <a href="#">Go to Canvas →</a>
+               <a href="https://jajags.instructure.com/courses/3443" target="_blank">Go to Canvas →</a>
            </div>
        </div>
        <div class="col-12 col-md-6 col-lg-3">
            <div class="class-card">
                <h4>D Block</h4>
-               <h5>Biology</h5>
+               <h5>weight??</h5>
                <p>1:50 PM - 3:20 PM</p>
-               <a href="#">Go to Canvas →</a>
+               <a href="https://jajags.instructure.com/courses/3427" target="_blank">Go to Canvas →</a>
            </div>
        </div>
    </div>
 </div>
 
-
+<footer>
+   <div class="container">
+       <div class="row">
+           <div class="col-4 col-sm-2 offset-1">
+               <h5>Quick Links</h5>
+               <ul class="list-unstyled">
+                   <li><a href="index.html">Home</a></li>
+                   <li><a href="https://pbs.twimg.com/media/Gwi1yjtbsAAcqaL.jpg" target="_blank">My Classes</a></li>
+                   <li><a href="https://en.wikipedia.org/wiki/Natural_resource" target="_blank">Resources</a></li>
+                   <li><a href="ai-chat.html">Helpful Yappatron</a></li>
+                   <li><a href="https://www.google.com/maps" target="_blank">Find me lil bro</a></li>
+               </ul>
+           </div>
+           <div class="col-6 col-sm-5 text-center">
+               <h5>Connect</h5>
+               <a href="https://jajags.instructure.com/" target="_blank">Canvas Portal</a> |
+               <a href="https://developer.mozilla.org/en-US/blog/" target="_blank">Study Groups</a> |
+               <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYLSmOFlvURYj5uPjwXQ6h0PR9czc3TP2qHB0SucTGWPizEg/viewform" target="_blank">Help Center</a>
+           </div>
+           <div class="col-sm-4 text-center">
+               <h5>Contact</h5>
+               Jefferson Academy Secondary<br />
+               Email: <strong>javier.gonzalezcastellanos@jajags.com</strong>
+           </div>
+       </div>
+   </div>
+</footer>
 
 
 </html>
