--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           JagTrack
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jagtrackNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon">I am the one who buttons</span>
       </button>
       <div class="collapse navbar-collapse" id="jagtrackNavbar">
           <ul class="navbar-nav ml-auto">
