--- a/screenshots/aboutme.html
+++ b/screenshots/aboutme.html
@@ -1,3 +1,35 @@
 <li class="nav-item active">
    <a class="nav-link" href="aboutme.html">About Me</a>
 </li>
+
+
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+
+  <link rel="stylesheet" href="css/styles.css" />
+
+
+  <title>About Me - JagTrack</title>
+</head>
+
+
+<body>
+
+
+  COPY YOUR NAVBAR FROM INDEX.HTML HERE
+
+
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="js/theme-toggle.js"></script>
+
+
+</body>
+</html>
