--- a/index.html
+++ b/index.html
@@ -131,6 +131,28 @@
     </div>
 </div>
 
+   <div class="container">
+  <h3>My Skills</h3>
+
+
+  <p>HTML & CSS</p>
+  <div class="progress">
+      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+  </div>
+
+
+  <p>Bootstrap</p>
+  <div class="progress">
+      <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+  </div>
+
+
+  <p>JavaScript</p>
+  <div class="progress">
+      <div class="progress-bar bg-warning" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+  </div>
+</div>
+
 
    <div>
        <h2>Study Resources</h2>
@@ -324,6 +346,7 @@ Add your theme toggle script AFTER these (but still before closing </body>):
 <!-- Custom JavaScript for theme toggle -->
 <script src="js/theme-toggle.js"></script>
 
+   <img src="img/profile.jpg" class="img-fluid rounded-circle" alt="My Profile Photo" />
 
 </body>
 </html>
