--- a/screenshots/aboutme.html
+++ b/screenshots/aboutme.html
@@ -77,5 +77,65 @@
   <script src="js/theme-toggle.js"></script>
 
 
+   <div class="container">
+  <h3>My Hobbies</h3>
+  <div class="row">
+      <div class="col-12 col-md-4">
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">🎮 Gaming</h5>
+                  <p class="card-text">I love strategy games and building in Minecraft. Currently learning game design!</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-12 col-md-4">
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">📚 Reading</h5>
+                  <p class="card-text">Favorite genres: fantasy and sci-fi. Currently reading the Percy Jackson series.</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-12 col-md-4">
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">⚽ Soccer</h5>
+                  <p class="card-text">Playing on the JA soccer team. Position: midfielder. Practice 3x/week!</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+   
+
+<div class="container">
+  <h3>My Goals</h3>
+  <div class="alert alert-success">
+      <h5>Academic Goal</h5>
+      <p>Maintain a 4.0 GPA this semester and improve my math skills in Algebra II.</p>
+  </div>
+  <div class="alert alert-info">
+      <h5>Career Goal</h5>
+      <p>Become a software engineer or UX designer. Planning to study computer science in college.</p>
+  </div>
+  <div class="alert alert-warning">
+      <h5>Personal Goal</h5>
+      <p>Learn to play guitar and write my own songs by the end of the year.</p>
+  </div>
+</div>
+
+   <div class="container">
+  <h3>My Skills</h3>
+  <p>
+      <span class="badge badge-primary">HTML</span>
+      <span class="badge badge-success">CSS</span>
+      <span class="badge badge-info">Bootstrap</span>
+      <span class="badge badge-warning">JavaScript (learning)</span>
+      <span class="badge badge-secondary">Git & GitHub</span>
+      <span class="badge badge-danger">Problem Solving</span>
+  </p>
+</div>
+
 </body>
 </html>
